n8n/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n:2.17.0
          imagePullPolicy: Always
          name: n8n
          startupProbe:
            httpGet:
              path: /healthz
              port: 5678
            failureThreshold: 30
            periodSeconds: 10 # 5 minutes max to start (30 * 10s)

          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 5

          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
